<resources>
    <string name="app_name">Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="nav_view_schedule"> View Schedule</string>
    <string name="nav_edit_schedule"> Edit Schedule</string>
    <string name="nav_create_schedule"> Create schedule</string>
    <string name="nav_view_list"> View List</string>

    <string name="luni_text">LUNI</string>
    <string name="marti_text">MARTI</string>
    <string name="miercuri_text">MIERCURI</string>
    <string name="joi_text">JOI</string>
    <string name="vineri_text">VINERI</string>

    <string name="absente_text">Absente</string>
    <string name="note_text"> Note</string>

    <string name="limbaromana_text">LIMBA ROMANA</string>
    <string name="limbaengleza_text">LIMBA ENGLEZA</string>
    <string name="limbafranceza_text">LIMBA FRANCEZA</string>
    <string name="matematica_text">MATEMATICA</string>
    <string name="informatica_text">INFORMATICA</string>
    <string name="fizica_text">FIZICA</string>
    <string name="chimie_text">CHIMIE</string>
    <string name="biologie_text">BIOLOGIE</string>
    <string name="istorie_text">ISTORIE</string>
    <string name="geografie_text">GEOGRAFIE</string>
    <string name="psihologie_text">PSIHOLOGIE</string>
    <string name="ed_antreprenoriala_text">ED. ANTREPRENORIALA</string>
    <string name="ed_fizica_text">ED. FIZICA</string>
    <string name="ed_vizuala_text">ED. VIZUALA</string>
    <string name="ed_muzicala_text">ED. MUZICALA</string>
    <string name="tic_text">T.I.C</string>
    <string name="religie_text">RELIGIE</string>

    <string name="Finish_btn"> Finish</string>

</resources>
