<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateListActivity2">

    <RelativeLayout
        android:id="@+id/basic_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/absente_text"
            android:textSize="28sp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Continue_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_toEndOf="@+id/textView33"
            android:layout_marginLeft="88sp"
            android:layout_marginTop="28sp"
            app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
            android:backgroundTint="@color/colorDarkGray"
            app:borderWidth="0dp"/>

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView32"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="64dp"
            android:text="@string/note_text"
            android:textSize="28sp"/>

        <ScrollView
            android:id="@+id/absente_scroll"
            android:layout_width="150dp"
            android:layout_height="462dp"
            android:layout_marginTop="75dp">

            <LinearLayout
                android:id="@+id/absente_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/limbaromana_text" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/limbafranceza_text" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/limbaengleza_text" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/matematica_text" />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informatica_text" />

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fizica_text" />

                <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chimie_text" />

                <CheckBox
                    android:id="@+id/checkBox11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/biologie_text" />

                <CheckBox
                    android:id="@+id/checkBox12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/istorie_text" />

                <CheckBox
                    android:id="@+id/checkBox13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/geografie_text" />

                <CheckBox
                    android:id="@+id/checkBox14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/psihologie_text" />

                <CheckBox
                    android:id="@+id/checkBox15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ed_antreprenoriala_text" />

                <CheckBox
                    android:id="@+id/checkBox16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ed_fizica_text" />

                <CheckBox
                    android:id="@+id/checkBox17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/religie_text" />

                <CheckBox
                    android:id="@+id/checkBox18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tic_text" />

                <CheckBox
                    android:id="@+id/checkBox19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ed_vizuala_text" />

                <CheckBox
                    android:id="@+id/checkBox20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ed_muzicala_text" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>