<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_create_schedule"
                android:title="@string/nav_create_schedule"/>
            <item
                android:id="@+id/nax_view_list"
                android:title="@string/nav_view_list"/>
            <item
                android:id="@+id/nav_view_schedule"
                android:title="@string/nav_view_schedule" />
            <item
                android:id="@+id/nav_edit_schedule"
                android:title="@string/nav_edit_schedule" />
        </group>
        </menu>
    </item>
</menu>
